[gd_scene load_steps=5 format=3 uid="uid://bpgm815a1u1ep"]

[ext_resource type="Script" uid="uid://blab7yc00brmg" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://7a1fgyq4edyo" path="res://Art/Buttons_UI/base_button.png" id="2_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.6627451, 0.21568628, 0.09803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
content_margin_left = 201.0
content_margin_top = 24.0
content_margin_right = 49.0
content_margin_bottom = 24.0
bg_color = Color(0.6, 0.6, 0.6, 0.1882353)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.59607846, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 350.0
offset_right = 772.0
offset_bottom = 649.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="play_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87058824, 0.8392157, 0.7764706, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Play"
icon = ExtResource("2_ekxnf")
flat = true
icon_alignment = 1

[node name="controls_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Controls"
icon = ExtResource("2_ekxnf")
icon_alignment = 1

[node name="quit_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit Game"
icon = ExtResource("2_ekxnf")
icon_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 70.0
offset_right = 1090.0
offset_bottom = 256.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ekxnf")

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.2784314, 1, 0.60784316, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
text = "HUGH FUNGUS"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 595.0
offset_right = 153.0
offset_bottom = 635.0

[connection signal="button_up" from="PanelContainer/VBoxContainer/play_Button" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/controls_Button" to="." method="_on_controls_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/quit_Button" to="." method="_on_quit_button_button_up"]
